Fixed spacing and cleaned up code

--- a/src/components/SearchPage.css
+++ b/src/components/SearchPage.css
@@ -59,6 +59,7 @@
     text-align: right;
     color: #f7b500 !important;
     width: 70%;
+    text-decoration: none;
 }
 
 .outer {
@@ -159,7 +160,7 @@
     margin: 8px 0 8px 0;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 300;
     font-stretch: normal;
     font-style: normal;
@@ -171,9 +172,9 @@
 .description {
     margin: 0;
     width: 100%;
-    height: 48px;
+    height: 56px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 300;
     font-stretch: normal;
     font-style: normal;
@@ -181,7 +182,9 @@
     letter-spacing: normal;
     color: #8697a8;
     overflow: hidden;
-    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .location-pin {
@@ -198,12 +201,13 @@
 
 .s-name {
     width: 90%;
+    margin: 3% 0 1% 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 32px;
     font-weight: 600;
     font-stretch: normal;
     font-style: normal;
-    line-height: 0.75;
+    line-height: 1.2;
     letter-spacing: normal;
     color: #32325d;
 }
@@ -237,6 +241,7 @@
 
 .s-story-title {
     width: 90%;
+    margin: 0 0 3% 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     font-weight: normal;
@@ -249,6 +254,7 @@
 
 .s-story {
     width: 90%;
+    margin: 0 0 6% 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: 300;
@@ -260,11 +266,12 @@
 }
 
 .mapId {
-    height: 40vh;
-    width: 100%;
+    height: 50vh;
+    width: 90%;
 }
 
 .s-row {
+    margin: 4% 0 4% 0;
     width: 90%;
     display: flex;
     flex-direction: row;
@@ -281,16 +288,28 @@
     justify-content: flex-start;
     align-items: center;
     align-content: stretch;
+    margin: 0 2px 0 2px;
 }
 
 .s-icon-img {
     width: 45px;
     height: 45px;
+    cursor: pointer;
 }
 
-.s-img-label {
+.s-icon-img:hover {
+    opacity: 60%;
+}
+
+.s-icon-img:active {
+    width: 43px;
+    height: 43px;
+}
+
+.s-icon-label {
+    margin: 0 0 0 0;
     font-family: 'Open Sans', sans-serif;
-    font-size: 4px;
+    font-size: 12px;
     font-weight: 300;
     font-stretch: normal;
     font-style: normal;
